--- a/src/main/resources/PSPApiMuseum.fxml
+++ b/src/main/resources/PSPApiMuseum.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -13,8 +14,8 @@
             <Font name="System Bold" size="18.0" />
          </font></Label>
       <Text layoutX="14.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TOTAL DE OBJETOS" />
-      <Label fx:id="labelMessage" layoutX="380.0" layoutY="392.0" />
       <Button fx:id="buttonLoad" layoutX="151.0" layoutY="20.0" mnemonicParsing="false" onAction="#loadTotalObjects" text="Cargar" />
-      <Text fx:id="txtTotal" layoutX="60.0" layoutY="107.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+      <Text fx:id="txtTotal" layoutX="26.0" layoutY="65.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="98.0" />
+      <TableView fx:id="tableMain" layoutX="260.0" layoutY="86.0" prefHeight="200.0" prefWidth="318.0" />
    </children>
 </AnchorPane>
