--- a/src/main/resources/PSPApiMuseum.fxml
+++ b/src/main/resources/PSPApiMuseum.fxml
@@ -1,21 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="476.0" prefWidth="654.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="483.0" prefWidth="860.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label fx:id="labelTotal" alignment="CENTER" layoutX="16.0" layoutY="49.0" prefHeight="23.0" prefWidth="117.0" textAlignment="CENTER">
-         <font>
-            <Font name="System Bold" size="18.0" />
-         </font></Label>
       <Text layoutX="14.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TOTAL DE OBJETOS" />
       <Button fx:id="buttonLoad" layoutX="151.0" layoutY="20.0" mnemonicParsing="false" onAction="#loadTotalObjects" text="Cargar" />
-      <Text fx:id="txtTotal" layoutX="26.0" layoutY="65.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="98.0" />
-      <TableView fx:id="tableMain" layoutX="133.0" layoutY="86.0" onMouseClicked="#tableMouseClickItem" prefHeight="221.0" prefWidth="445.0" />
+      <Text fx:id="txtTotal" layoutX="26.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="98.0" />
+      <TableView fx:id="tableMain" layoutX="16.0" layoutY="89.0" onMouseClicked="#tableMouseClickItem" prefHeight="221.0" prefWidth="445.0" />
+      <TableView fx:id="tableObjects" layoutX="479.0" layoutY="89.0" prefHeight="221.0" prefWidth="360.0" />
    </children>
 </AnchorPane>
