--- a/src/main/resources/PSPApiMuseum.fxml
+++ b/src/main/resources/PSPApiMuseum.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
@@ -11,8 +12,8 @@
       <Text layoutX="14.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TOTAL DE OBJETOS" />
       <Button fx:id="buttonLoad" layoutX="151.0" layoutY="20.0" mnemonicParsing="false" onAction="#loadTotalObjects" text="Cargar" />
       <Text fx:id="txtTotal" layoutX="26.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="98.0" />
-      <TableView fx:id="tableMain" layoutX="16.0" layoutY="89.0" onMouseClicked="#tableMouseClickItem" prefHeight="221.0" prefWidth="445.0" />
-      <TableView fx:id="tableObjects" layoutX="479.0" layoutY="89.0" prefHeight="221.0" prefWidth="360.0" />
+      <TableView fx:id="tableMain" layoutX="16.0" layoutY="89.0" onMouseClicked="#tableMouseClickItem" prefHeight="221.0" prefWidth="322.0" />
       <ComboBox fx:id="comboIDfromDepar" layoutX="190.0" layoutY="348.0" prefWidth="150.0" />
+      <TextArea fx:id="textAreaObjects" layoutX="451.0" layoutY="69.0" prefHeight="274.0" prefWidth="391.0" />
    </children>
 </AnchorPane>
