--- a/src/main/resources/PSPApiMuseum.fxml
+++ b/src/main/resources/PSPApiMuseum.fxml
@@ -3,7 +3,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
@@ -14,7 +13,6 @@
       <Text fx:id="txtTotal" layoutX="26.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="98.0" />
       <TableView fx:id="tableMain" layoutX="16.0" layoutY="89.0" onMouseClicked="#tableMouseClickItem" prefHeight="221.0" prefWidth="322.0" />
       <ComboBox fx:id="comboIDfromDepar" layoutX="190.0" layoutY="348.0" prefWidth="150.0" />
-      <TextArea fx:id="textAreaObjects" layoutX="398.0" layoutY="40.0" prefHeight="82.0" prefWidth="117.0" />
-      <TableView fx:id="tableObjects" layoutX="515.0" layoutY="131.0" prefHeight="200.0" prefWidth="200.0" />
+      <TableView fx:id="tableIds" layoutX="349.0" layoutY="89.0" prefHeight="221.0" prefWidth="104.0" />
    </children>
 </AnchorPane>
