--- a/src/main/resources/PSPApiMuseum.fxml
+++ b/src/main/resources/PSPApiMuseum.fxml
@@ -14,5 +14,6 @@
       <TableView fx:id="tableMain" layoutX="16.0" layoutY="89.0" onMouseClicked="#tableMouseClickItem" prefHeight="221.0" prefWidth="322.0" />
       <ComboBox fx:id="comboIDfromDepar" layoutX="190.0" layoutY="348.0" prefWidth="150.0" />
       <TableView fx:id="tableIds" layoutX="349.0" layoutY="89.0" prefHeight="221.0" prefWidth="104.0" />
+      <Button fx:id="butSelectObjects" layoutX="231.0" layoutY="21.0" mnemonicParsing="false" text="Objetos" />
    </children>
 </AnchorPane>
