--- a/src/main/resources/PSPApiMuseum.fxml
+++ b/src/main/resources/PSPApiMuseum.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
@@ -12,8 +11,7 @@
       <Button fx:id="buttonLoad" layoutX="151.0" layoutY="20.0" mnemonicParsing="false" onAction="#loadTotalObjects" text="Cargar" />
       <Text fx:id="txtTotal" layoutX="26.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="98.0" />
       <TableView fx:id="tableMain" layoutX="16.0" layoutY="89.0" onMouseClicked="#tableMouseClickItem" prefHeight="221.0" prefWidth="322.0" />
-      <ComboBox fx:id="comboIDfromDepar" layoutX="190.0" layoutY="348.0" prefWidth="150.0" />
-      <TableView fx:id="tableIds" layoutX="349.0" layoutY="89.0" prefHeight="221.0" prefWidth="104.0" />
-      <Button fx:id="butSelectObjects" layoutX="231.0" layoutY="21.0" mnemonicParsing="false" text="Objetos" />
+      <TableView fx:id="tableObjects" layoutX="349.0" layoutY="89.0" prefHeight="221.0" prefWidth="284.0" />
+      <Button fx:id="butSelectObjects" layoutX="231.0" layoutY="21.0" mnemonicParsing="false" onAction="#setTotalObjects" text="Objetos" />
    </children>
 </AnchorPane>
