--- a/src/main/resources/PSPApiMuseum.fxml
+++ b/src/main/resources/PSPApiMuseum.fxml
@@ -11,7 +11,10 @@
       <Button fx:id="buttonLoad" layoutX="151.0" layoutY="20.0" mnemonicParsing="false" onAction="#loadTotalObjects" text="Cargar" />
       <Text fx:id="txtTotal" layoutX="26.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="98.0" />
       <TableView fx:id="tableMain" layoutX="16.0" layoutY="89.0" onMouseClicked="#tableMouseClickItem" prefHeight="221.0" prefWidth="322.0" />
-      <TableView fx:id="tableObjects" layoutX="349.0" layoutY="89.0" prefHeight="221.0" prefWidth="284.0" />
-      <Button fx:id="butSelectObjects" layoutX="231.0" layoutY="21.0" mnemonicParsing="false" onAction="#setTotalObjects" text="Objetos" />
+      <TableView fx:id="tableObjects" layoutX="349.0" layoutY="89.0" prefHeight="221.0" prefWidth="497.0">
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy></TableView>
+      <Text fx:id="idDepartment" layoutX="324.0" layoutY="383.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
    </children>
 </AnchorPane>
