--- a/src/main/resources/PSPApiMuseum.fxml
+++ b/src/main/resources/PSPApiMuseum.fxml
@@ -1,20 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="483.0" prefWidth="860.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Text layoutX="14.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TOTAL DE OBJETOS" />
-      <Button fx:id="buttonLoad" layoutX="151.0" layoutY="20.0" mnemonicParsing="false" onAction="#loadTotalObjects" text="Cargar" />
-      <Text fx:id="txtTotal" layoutX="26.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="98.0" />
-      <TableView fx:id="tableMain" layoutX="16.0" layoutY="89.0" onMouseClicked="#tableMouseClickItem" prefHeight="221.0" prefWidth="322.0" />
-      <TableView fx:id="tableObjects" layoutX="349.0" layoutY="89.0" prefHeight="221.0" prefWidth="497.0">
+      <Button fx:id="buttonLoad" layoutX="16.0" layoutY="37.0" mnemonicParsing="false" onAction="#loadTotalObjects" text="Objetos Totales Museo" />
+      <Text fx:id="txtTotal" fill="#2a4fd3" fontSmoothingType="LCD" layoutX="167.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="200.0">
+         <font>
+            <Font name="System Font" size="24.0" />
+         </font></Text>
+      <TableView fx:id="tableMain" layoutX="16.0" layoutY="89.0" onMouseClicked="#tableMouseClickItem" prefHeight="332.0" prefWidth="322.0" />
+      <TableView fx:id="tableObjects" layoutX="349.0" layoutY="89.0" prefHeight="332.0" prefWidth="497.0">
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy></TableView>
-      <Text fx:id="idDepartment" layoutX="324.0" layoutY="383.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+      <Label layoutX="14.0" layoutY="436.0" text="Objetos Departamento: " />
+      <Text fx:id="txtTotalDepart" fill="#2a4fd3" fontSmoothingType="LCD" layoutX="153.0" layoutY="452.0" strokeType="OUTSIDE" strokeWidth="0.0">
+         <font>
+            <Font name="System Font" size="24.0" />
+         </font>
+      </Text>
+      <ProgressIndicator fx:id="progressIndicator" layoutX="771.0" layoutY="30.0" prefHeight="40.0" prefWidth="49.0" />
    </children>
 </AnchorPane>
