--- a/src/main/resources/PSPApiMuseum.fxml
+++ b/src/main/resources/PSPApiMuseum.fxml
@@ -1,31 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="483.0" prefWidth="860.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="627.0" prefWidth="920.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button fx:id="buttonLoad" layoutX="16.0" layoutY="37.0" mnemonicParsing="false" onAction="#loadTotalObjects" text="Objetos Totales Museo" />
-      <Text fx:id="txtTotal" fill="#2a4fd3" fontSmoothingType="LCD" layoutX="167.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="200.0">
+      <Button fx:id="buttonLoad" layoutX="21.0" layoutY="544.0" mnemonicParsing="false" onAction="#loadTotalObjects" text="Objetos Totales Museo" />
+      <Text fx:id="txtTotal" fill="#2a4fd3" fontSmoothingType="LCD" layoutX="176.0" layoutY="565.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="200.0">
          <font>
             <Font name="System Font" size="24.0" />
          </font></Text>
-      <TableView fx:id="tableMain" layoutX="16.0" layoutY="89.0" onMouseClicked="#tableMouseClickItem" prefHeight="332.0" prefWidth="322.0" />
-      <TableView fx:id="tableObjects" layoutX="349.0" layoutY="89.0" prefHeight="332.0" prefWidth="497.0">
+      <TableView fx:id="tableMain" layoutX="28.0" layoutY="100.0" onMouseClicked="#tableMouseClickItem" prefHeight="391.0" prefWidth="231.0">
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy></TableView>
-      <Label layoutX="14.0" layoutY="436.0" text="Objetos Departamento: " />
-      <Text fx:id="txtTotalDepart" fill="#2a4fd3" fontSmoothingType="LCD" layoutX="153.0" layoutY="452.0" strokeType="OUTSIDE" strokeWidth="0.0">
+      <TableView fx:id="tableObjects" layoutX="412.0" layoutY="100.0" prefHeight="391.0" prefWidth="478.0">
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy></TableView>
+      <Label layoutX="28.0" layoutY="505.0" text="Objetos Departamento: " />
+      <Text fx:id="txtTotalDepart" fill="#2a4fd3" fontSmoothingType="LCD" layoutX="164.0" layoutY="522.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="102.0">
          <font>
             <Font name="System Font" size="24.0" />
          </font>
       </Text>
-      <ProgressIndicator fx:id="progressIndicator" layoutX="771.0" layoutY="30.0" prefHeight="40.0" prefWidth="49.0" />
+      <ProgressIndicator fx:id="progressIndicator" layoutX="305.0" layoutY="287.0" prefHeight="71.0" prefWidth="52.0">
+         <cursor>
+            <Cursor fx:constant="DEFAULT" />
+         </cursor>
+      </ProgressIndicator>
+      <Text fx:id="messageDownload" layoutX="266.0" layoutY="257.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="129.5">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Text>
+      <TextField fx:id="textFieldSearch" layoutX="144.0" layoutY="54.0" text="cat" />
+      <Label layoutX="28.0" layoutY="58.0" text="Palabra de filtrado" />
    </children>
 </AnchorPane>
