--- a/src/main/resources/PSPApiMuseum.fxml
+++ b/src/main/resources/PSPApiMuseum.fxml
@@ -10,38 +10,38 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="627.0" prefWidth="920.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="558.0" prefWidth="998.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button fx:id="buttonLoad" layoutX="21.0" layoutY="544.0" mnemonicParsing="false" onAction="#loadTotalObjects" text="Objetos Totales Museo" />
-      <Text fx:id="txtTotal" fill="#2a4fd3" fontSmoothingType="LCD" layoutX="176.0" layoutY="565.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="200.0">
+      <Button fx:id="buttonLoad" layoutX="27.0" layoutY="503.0" mnemonicParsing="false" onAction="#loadTotalObjects" text="Objetos Totales Museo" />
+      <Text fx:id="txtTotal" fill="#2a4fd3" fontSmoothingType="LCD" layoutX="176.0" layoutY="526.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="200.0">
          <font>
             <Font name="System Font" size="24.0" />
          </font></Text>
-      <TableView fx:id="tableMain" layoutX="28.0" layoutY="100.0" onMouseClicked="#tableMouseClickItem" prefHeight="391.0" prefWidth="231.0">
+      <TableView fx:id="tableMain" layoutX="28.0" layoutY="67.0" onMouseClicked="#tableMouseClickItem" prefHeight="391.0" prefWidth="231.0">
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy></TableView>
-      <TableView fx:id="tableObjects" layoutX="412.0" layoutY="100.0" prefHeight="391.0" prefWidth="478.0">
+      <TableView fx:id="tableObjects" layoutX="403.0" layoutY="67.0" prefHeight="391.0" prefWidth="575.0">
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy></TableView>
-      <Label layoutX="28.0" layoutY="505.0" text="Objetos Departamento: " />
-      <Text fx:id="txtTotalDepart" fill="#2a4fd3" fontSmoothingType="LCD" layoutX="164.0" layoutY="522.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="102.0">
+      <Label layoutX="34.0" layoutY="474.0" text="Objetos Departamento: " />
+      <Text fx:id="txtTotalDepart" fill="#2a4fd3" fontSmoothingType="LCD" layoutX="176.0" layoutY="491.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="102.0">
          <font>
             <Font name="System Font" size="24.0" />
          </font>
       </Text>
-      <ProgressIndicator fx:id="progressIndicator" layoutX="305.0" layoutY="287.0" prefHeight="71.0" prefWidth="52.0">
+      <ProgressIndicator fx:id="progressIndicator" layoutX="288.0" layoutY="169.0" prefHeight="71.0" prefWidth="52.0">
          <cursor>
             <Cursor fx:constant="DEFAULT" />
          </cursor>
       </ProgressIndicator>
-      <Text fx:id="messageDownload" layoutX="266.0" layoutY="257.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="129.5">
+      <Text fx:id="messageDownload" layoutX="266.0" layoutY="256.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="129.5">
          <font>
             <Font size="24.0" />
          </font>
       </Text>
-      <TextField fx:id="textFieldSearch" layoutX="144.0" layoutY="54.0" text="cat" />
-      <Label layoutX="28.0" layoutY="58.0" text="Palabra de filtrado" />
+      <TextField fx:id="textFieldSearch" layoutX="135.0" layoutY="33.0" text="cat" />
+      <Label layoutX="28.0" layoutY="37.0" text="Palabra de filtrado" />
    </children>
 </AnchorPane>
