--- a/src/main/resources/PSPApiMuseum.fxml
+++ b/src/main/resources/PSPApiMuseum.fxml
@@ -10,23 +10,23 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="558.0" prefWidth="998.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="489.0" prefWidth="998.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button fx:id="buttonLoad" layoutX="27.0" layoutY="503.0" mnemonicParsing="false" onAction="#loadTotalObjects" text="Objetos Totales Museo" />
-      <Text fx:id="txtTotal" fill="#2a4fd3" fontSmoothingType="LCD" layoutX="176.0" layoutY="526.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="200.0">
+      <Button fx:id="buttonLoad" layoutX="20.0" layoutY="422.0" mnemonicParsing="false" onAction="#loadTotalObjects" text="Objetos Totales Museo" />
+      <Text fx:id="txtTotal" fill="#2a4fd3" fontSmoothingType="LCD" layoutX="166.0" layoutY="443.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="200.0">
          <font>
             <Font name="System Font" size="24.0" />
          </font></Text>
-      <TableView fx:id="tableMain" layoutX="28.0" layoutY="67.0" onMouseClicked="#tableMouseClickItem" prefHeight="391.0" prefWidth="231.0">
+      <TableView fx:id="tableMain" layoutX="28.0" layoutY="67.0" onMouseClicked="#tableDepartmentClickItem" prefHeight="320.0" prefWidth="231.0">
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy></TableView>
-      <TableView fx:id="tableObjects" layoutX="403.0" layoutY="67.0" prefHeight="391.0" prefWidth="575.0">
+      <TableView fx:id="tableObjects" layoutX="403.0" layoutY="67.0" onMouseClicked="#tableObjectClickItem" prefHeight="320.0" prefWidth="439.0">
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy></TableView>
-      <Label layoutX="34.0" layoutY="474.0" text="Objetos Departamento: " />
-      <Text fx:id="txtTotalDepart" fill="#2a4fd3" fontSmoothingType="LCD" layoutX="176.0" layoutY="491.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="102.0">
+      <Label layoutX="27.0" layoutY="400.0" text="Objetos Departamento: " />
+      <Text fx:id="txtTotalDepart" fill="#2a4fd3" fontSmoothingType="LCD" layoutX="164.0" layoutY="417.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="102.0">
          <font>
             <Font name="System Font" size="24.0" />
          </font>
@@ -41,7 +41,7 @@
             <Font size="24.0" />
          </font>
       </Text>
-      <TextField fx:id="textFieldSearch" layoutX="135.0" layoutY="33.0" text="cat" />
-      <Label layoutX="28.0" layoutY="37.0" text="Palabra de filtrado" />
+      <TextField fx:id="textFieldSearch" layoutX="117.0" layoutY="34.0" prefHeight="26.0" prefWidth="171.0" promptText="filtro de busqueda necesario" />
+      <Label layoutX="14.0" layoutY="38.0" text="Palabra de filtrado" />
    </children>
 </AnchorPane>
