--- a/src/main/resources/PSPApiMuseum.fxml
+++ b/src/main/resources/PSPApiMuseum.fxml
@@ -5,12 +5,13 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="489.0" prefWidth="998.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="531.0" prefWidth="998.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Button fx:id="buttonLoad" layoutX="20.0" layoutY="422.0" mnemonicParsing="false" onAction="#loadTotalObjects" text="Objetos Totales Museo" />
       <Text fx:id="txtTotal" fill="#2a4fd3" fontSmoothingType="LCD" layoutX="166.0" layoutY="443.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="200.0">
@@ -43,5 +44,7 @@
       </Text>
       <TextField fx:id="textFieldSearch" layoutX="117.0" layoutY="34.0" prefHeight="26.0" prefWidth="171.0" promptText="filtro de busqueda necesario" />
       <Label layoutX="14.0" layoutY="38.0" text="Palabra de filtrado" />
+      <TextArea fx:id="tAreaObejtosList" layoutX="357.0" layoutY="441.0" prefHeight="71.0" prefWidth="532.0" />
+      <Label layoutX="357.0" layoutY="415.0" text="Objetos Consultados" />
    </children>
 </AnchorPane>
