--- a/src/main/resources/PSPApiMuseum.fxml
+++ b/src/main/resources/PSPApiMuseum.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="531.0" prefWidth="998.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="576.0" prefWidth="863.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Button fx:id="buttonLoad" layoutX="20.0" layoutY="422.0" mnemonicParsing="false" onAction="#loadTotalObjects" text="Objetos Totales Museo" />
       <Text fx:id="txtTotal" fill="#2a4fd3" fontSmoothingType="LCD" layoutX="166.0" layoutY="443.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="200.0">
@@ -22,7 +22,7 @@
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy></TableView>
-      <TableView fx:id="tableObjects" layoutX="403.0" layoutY="67.0" onMouseClicked="#tableObjectClickItem" prefHeight="320.0" prefWidth="439.0">
+      <TableView fx:id="tableObjects" layoutX="403.0" layoutY="67.0" onMouseClicked="#tableObjectClickItem" prefHeight="320.0" prefWidth="432.0">
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy></TableView>
@@ -32,7 +32,7 @@
             <Font name="System Font" size="24.0" />
          </font>
       </Text>
-      <ProgressIndicator fx:id="progressIndicator" layoutX="288.0" layoutY="169.0" prefHeight="71.0" prefWidth="52.0">
+      <ProgressIndicator fx:id="progressIndicator" layoutX="312.0" layoutY="164.0" prefHeight="71.0" prefWidth="38.0">
          <cursor>
             <Cursor fx:constant="DEFAULT" />
          </cursor>
@@ -44,7 +44,9 @@
       </Text>
       <TextField fx:id="textFieldSearch" layoutX="117.0" layoutY="34.0" prefHeight="26.0" prefWidth="171.0" promptText="filtro de busqueda necesario" />
       <Label layoutX="14.0" layoutY="38.0" text="Palabra de filtrado" />
-      <TextArea fx:id="tAreaObejtosList" layoutX="357.0" layoutY="441.0" prefHeight="71.0" prefWidth="532.0" />
-      <Label layoutX="357.0" layoutY="415.0" text="Objetos Consultados" />
+      <TextArea fx:id="tAreaObejtosList" layoutX="310.0" layoutY="432.0" prefHeight="71.0" prefWidth="532.0" />
+      <Label layoutX="311.0" layoutY="409.0" text="Objetos Consultados" />
+      <Button fx:id="btDelete" layoutX="403.0" layoutY="511.0" mnemonicParsing="false" onAction="#delObject" text="Borrar" />
+      <TextField fx:id="txtFieldDelete" alignment="CENTER" layoutX="314.0" layoutY="511.0" prefHeight="25.0" prefWidth="82.0" promptText="Nº a borrar" />
    </children>
 </AnchorPane>
