--- a/src/main/resources/PSPApiMuseum.fxml
+++ b/src/main/resources/PSPApiMuseum.fxml
@@ -15,8 +15,8 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="668.0" prefWidth="863.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button fx:id="buttonLoad" layoutX="476.0" layoutY="472.0" mnemonicParsing="false" onAction="#loadTotalObjects" text="Objetos Totales Museo" textAlignment="CENTER" />
-      <Text fx:id="txtTotal" fill="#2a4fd3" fontSmoothingType="LCD" layoutX="635.0" layoutY="493.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="200.0">
+      <Button fx:id="buttonLoad" layoutX="403.0" layoutY="471.0" mnemonicParsing="false" onAction="#loadTotalObjects" text="Objetos Totales Museo" textAlignment="CENTER" />
+      <Text fx:id="txtTotal" fill="#2a4fd3" fontSmoothingType="LCD" layoutX="560.0" layoutY="492.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="200.0">
          <font>
             <Font name="System Font" size="24.0" />
          </font></Text>
@@ -46,13 +46,14 @@
       </Text>
       <TextField fx:id="textFieldSearch" layoutX="141.0" layoutY="108.0" prefHeight="26.0" prefWidth="171.0" promptText="filtro de busqueda necesario" />
       <Label layoutX="29.0" layoutY="112.0" text="Palabra de filtrado" />
-      <TextArea fx:id="tAreaObejtosList" layoutX="203.0" layoutY="508.0" prefHeight="96.0" prefWidth="634.0" />
-      <Label layoutX="209.0" layoutY="485.0" text="Objetos Consultados" />
-      <Button fx:id="btDelete" layoutX="298.0" layoutY="611.0" mnemonicParsing="false" onAction="#delObject" style="-fx-background-color: FE6F50;" text="Borrar" />
+      <TextArea fx:id="tAreaObejtosList" layoutX="179.0" layoutY="508.0" prefHeight="96.0" prefWidth="658.0" />
+      <Label layoutX="179.0" layoutY="484.0" text="Objetos Consultados" />
+      <Button fx:id="btDelete" layoutX="298.0" layoutY="611.0" mnemonicParsing="false" onAction="#delObject" style="-fx-background-color: FE6F50;" text="Borrar" textFill="WHITE" />
       <TextField fx:id="txtFieldDelete" alignment="CENTER" layoutX="209.0" layoutY="611.0" prefHeight="25.0" prefWidth="82.0" promptText="Nº a borrar" />
       <ImageView fx:id="imgLogo" fitHeight="116.0" fitWidth="130.0" layoutX="719.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@img/logoMET.jpeg" />
          </image></ImageView>
+      <Button fx:id="butCSV" layoutX="432.0" layoutY="611.0" mnemonicParsing="false" style="-fx-background-color: green;" text="CSV" textFill="WHITE" />
    </children>
 </AnchorPane>
