--- a/src/main/resources/PSPApiMuseum.fxml
+++ b/src/main/resources/PSPApiMuseum.fxml
@@ -60,7 +60,7 @@
             <Font size="36.0" />
          </font>
       </Text>
-      <Text fx:id="txtCSVMade" fill="#20ae44" layoutX="559.0" layoutY="631.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="380.21630859375">
+      <Text fx:id="txtZIPMade" fill="#20ae44" layoutX="559.0" layoutY="631.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="380.21630859375">
          <font>
             <Font size="18.0" />
          </font>
