--- a/src/main/resources/ObjectScreen.fxml
+++ b/src/main/resources/ObjectScreen.fxml
@@ -97,7 +97,7 @@
       <Line endX="794.0" endY="1.0" layoutX="47.0" layoutY="59.0" startX="-27.207107543945312" startY="1.0" stroke="#e40707" />
       <ImageView fitHeight="114.0" fitWidth="121.0" layoutX="35.0" layoutY="367.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@img/logoMET.jpeg" />
+            <Image url="@img/logoMET.png" />
          </image>
       </ImageView>
    </children>
