--- a/src/main/resources/PSPApiMuseum.fxml
+++ b/src/main/resources/PSPApiMuseum.fxml
@@ -34,7 +34,7 @@
             <Font name="System Font" size="24.0" />
          </font>
       </Text>
-      <ProgressIndicator fx:id="progressIndicator" layoutX="312.0" layoutY="265.0" prefHeight="71.0" prefWidth="38.0">
+      <ProgressIndicator fx:id="progressIndicator" layoutX="312.0" layoutY="265.0" prefHeight="71.0" prefWidth="38.0" progress="0.0">
          <cursor>
             <Cursor fx:constant="DEFAULT" />
          </cursor>
