--- a/src/main/resources/PSPApiMuseum.fxml
+++ b/src/main/resources/PSPApiMuseum.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressIndicator?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -13,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="668.0" prefWidth="959.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="668.0" prefWidth="971.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Button fx:id="buttonLoad" layoutX="403.0" layoutY="471.0" mnemonicParsing="false" onAction="#loadTotalObjects" text="Objetos Totales Museo" textAlignment="CENTER" />
       <Text fx:id="txtTotal" fill="#2a4fd3" fontSmoothingType="LCD" layoutX="560.0" layoutY="492.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="200.0">
@@ -24,10 +26,23 @@
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy></TableView>
-      <TableView fx:id="tableObjects" layoutX="403.0" layoutY="138.0" onMouseClicked="#tableObjectClickItem" prefHeight="320.0" prefWidth="536.0">
-         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy></TableView>
+      <TabPane fx:id="tabPaneObjects" layoutX="403.0" layoutY="129.0" prefHeight="337.0" prefWidth="537.0" tabClosingPolicy="ALL_TABS">
+        <tabs>
+          <Tab text="Untitled Tab 2" closable="true">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <TableView fx:id="tableObjects" layoutX="2.0" onMouseClicked="#tableObjectClickItem" prefHeight="304.0" prefWidth="537.0">
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                        </TableView>
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+        </tabs>
+      </TabPane>
       <Label layoutX="28.0" layoutY="484.0" text="Objetos Departamento: " />
       <Text fx:id="txtTotalDepart" fill="#2a4fd3" fontSmoothingType="LCD" layoutX="42.0" layoutY="531.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="102.0">
          <font>
